cmake_minimum_required (VERSION 3.13)
project (Log)
set(CMAKE_CXX_FLAGS "-pthread")
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
# include_directories(Time Thread)
link_directories(${PROJECT_BINARY_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_subdirectory(Time)
add_subdirectory(Thread)
aux_source_directory(. Log_srcs)
add_library(Log STATIC ${Log_srcs})
aux_source_directory(./Test Log_Tests)
foreach(testfile ${Log_Tests})
    get_filename_component(testname ${testfile} NAME_WE)
    add_executable(${testname} ${testfile})
    target_link_libraries(${testname} Log Time Thread )
endforeach(testfile)