cmake_minimum_required (VERSION 3.13)
aux_source_directory(. Time_srcs)
add_library(Time STATIC ${Time_srcs})
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
aux_source_directory(./Test Time_Tests)
foreach(testfile ${Time_Tests})
    get_filename_component(testname ${testfile} NAME_WE)
    add_executable(${testname} ${testfile})
    target_link_libraries(${testname} Time)
endforeach(testfile)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)